<resources>
    <string name="app_name">FFU</string>
    <string name="JOIN">회원가입</string>
    <string name="name">이름</string>
    <string name="id">아이디</string>
    <string name="pwd">비밀번호(최소 6자리)</string>
    <string name="check_pwd">비밀번호 확인</string>
    <string name="birth">생일이 언제인가요?</string>
    <string name="YYYY">YYYY</string>
    <string name="MM">MM</string>
    <string name="DD">DD</string>
    <string name="gender">성별을 선택하세요</string>
    <string name ="join_alert">변경이 어려우니 신중히 입력해주세요</string>
    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="join">회원가입</string>
    <string name="choice">선택</string>
    <string name="cancel">아니오</string>
    <string name="save">예</string>

    <string name="HOME">HOME</string>
    <string name="identity_verification">본인 확인을 위해\n전화번호 인증이 필요합니다!</string>
    <string name="only_private">전화번호는 절대 공개되지 않습니다.</string>
    <string name="phone_num">휴대전화번호 (예시: 01012345678)</string>
    <string name="phone_num_ex">휴대전화번호 입력</string>
    <string name="type_phone_num">휴대폰번호 입력</string>
    <string name="certification_num">인증번호 (예시: 123456)</string>
    <string name="send_certification_num">인증번호 6자리 입력</string>
    <string name="request_certification_num">인증 요청</string>
    <string name="resend_verification">인증번호 재전송</string>
    <string name="confirm">확인</string>
    <string name="INPUT_COMPLETE">입력 완료</string>
    <string name="send_verification">인증번호가 전송되었습니다.</string>
    <string name="timer">03분 00초</string>

    <string name="LOGIN">LOGIN</string>
    <string name="ID">ID</string>
    <string name="Password">비밀번호</string>
    <string name="SIGN_IN">로그인</string>
    <string name="SEARCH_PASSWORD">비밀번호 찾기</string>
    <string name="FFU">FFU</string>
    <string name="Friends_For_U">Friends For U</string>
    <string name="EMAIL">이메일</string>
    <string name="email">이메일</string>
    <string name="next_screen">다음 화면</string>
    <string name="next">다음</string>

    <!-- seunggyu -->
    <string name="confirm_text">추천</string>
    <string name="text_move_map_set_location">지도를 움직여 위치를 설정하세요</string>
    <string name="init">초기화</string>

    <!-- youngin -->
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="menu_store">Store</string>
    <string name="menu_profile">Profile</string>
    <string name="Success">Success</string>
    <string name="Loading">Loading..</string>
    <string name="title_activity_main">MainActivity</string>

</resources>