<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10sp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="170sp"
        android:layout_height="160sp"
        android:src="@drawable/cloud2"
        app:layout_constraintBottom_toBottomOf="@id/guideline1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/applicationName"
        android:layout_width="99sp"
        android:layout_height="50sp"
        android:fontFamily="@font/permanent"
        android:text="@string/FFU"
        android:textColor="@color/main_text_color"
        android:textSize="43sp"
        android:textStyle="bold|italic"
        app:layout_constraintRight_toRightOf="@id/imageView"
        app:layout_constraintLeft_toLeftOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/appFullName"
        android:text="@string/Friends_For_U"
        app:layout_constraintTop_toBottomOf="@id/applicationName"
        app:layout_constraintStart_toStartOf="@id/applicationName"
        app:layout_constraintEnd_toEndOf="@id/applicationName"/>

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LOGIN"
        android:textColor="#5FB0F1"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <EditText
        android:id="@+id/main_editEmail"
        android:layout_width="270sp"
        android:layout_height="40sp"
        android:background="@drawable/box_id"
        android:ems="10"
        android:hint="@string/EMAIL"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="@color/black"
        android:textColorHint="#8E8D8D"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline1"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        />

    <EditText
        android:id="@+id/main_editPassword"
        android:layout_width="270sp"
        android:layout_height="40sp"
        android:layout_gravity="center"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="10sp"
        android:background="@drawable/box_id"
        android:ems="10"
        android:hint="@string/Password"
        android:text=""
        android:textColor="@color/black"
        android:textColorHint="#8E8D8D"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        app:layout_constraintBottom_toTopOf="@id/guideline3" />


    <Button
        android:id="@+id/main_startButton"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:background="@drawable/box_button"
        android:text="@string/SIGN_IN"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3"
        app:layout_constraintBottom_toTopOf="@id/guideline4"/>

    <ImageButton
        android:id="@+id/main_kakaoLogin"
        android:layout_width="fill_parent"
        android:layout_height="45sp"
        android:background="@drawable/kakao_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline4"
        app:layout_constraintBottom_toTopOf="@id/guideline5"/>

    <ImageButton
        android:id="@+id/main_googleLogin"
        android:layout_width="fill_parent"
        android:layout_height="45sp"
        android:background="@drawable/google_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline5"
        app:layout_constraintBottom_toTopOf="@id/guideline6"/>

    <Button
        android:id="@+id/main_signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FF0000"
        android:text="@string/JOIN"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/main_searchButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/main_searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FF0000"
        android:text="@string/SEARCH_PASSWORD"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/main_signUpButton" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.34" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.46" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.56" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.74" />

</androidx.constraintlayout.widget.ConstraintLayout>

