<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10sp"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:src="@drawable/ffu"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/main_textCheckMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/identity_verification"
        android:textColor="@color/main_text_color"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginLeft="10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        app:layout_constraintBottom_toTopOf="@id/guideline3"/>

    <TextView
        android:id="@+id/main_textPhoneNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_num"
        android:textColor="#3F51B5"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline4"/>


    <EditText
        android:id="@+id/main_editPhone"
        android:layout_width="225sp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_num_ex"
        android:inputType="number"
        android:text=""
        android:maxLength="11"
        android:textColorHint="#8E8D8D"
        app:layout_constraintBottom_toTopOf="@id/guideline5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline4" />

    <com.dx.dxloadingbutton.lib.LoadingButton
        android:id="@+id/main_requestButton"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        app:lb_resetAfterFailed="true"
        app:lb_btnRippleColor="#000000"
        app:lb_btnDisabledColor="#cccccc"
        app:lb_disabledTextColor="#999999"
        app:lb_rippleEnable="true"
        app:lb_btnText="@string/request_certification_num"
        custom:lb_btnColor="#3F51B5"
        app:layout_constraintStart_toEndOf="@+id/main_editPhone"
        app:layout_constraintTop_toBottomOf="@id/guideline4"
        app:layout_constraintBottom_toTopOf="@id/guideline5"
        android:layout_marginLeft="20sp"
        />


    <TextView
        android:id="@+id/main_textMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/certification_num"
        android:textColor="#3F51B5"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline6"/>

    <EditText
        android:id="@+id/main_editVerificationNum"
        android:layout_width="220sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:hint="@string/send_certification_num"
        android:inputType="number"
        android:text=""
        android:enabled="false"
        android:textColorHint="#8E8D8D"
        android:maxLength="6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline6"
        app:layout_constraintBottom_toTopOf="@id/guideline7"/>

    <com.dx.dxloadingbutton.lib.LoadingButton
        android:id="@+id/main_checkVerification"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        app:lb_resetAfterFailed="true"
        app:lb_btnRippleColor="#000000"
        app:lb_btnDisabledColor="#cccccc"
        app:lb_disabledTextColor="#999999"
        app:lb_rippleEnable="true"
        app:lb_btnText="@string/confirm"
        custom:lb_btnColor="#3F51B5"
        app:layout_constraintLeft_toRightOf="@id/main_editVerificationNum"
        app:layout_constraintTop_toBottomOf="@id/guideline6"
        app:layout_constraintBottom_toTopOf="@id/guideline7"
        android:layout_marginLeft="20sp"
        />

    <Button
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:id="@+id/main_joinButton"
        android:text="@string/next_screen"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:enabled="false"
        android:background="@drawable/box_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.metagalactic.dotprogressbar.DotProgressBar
            android:id="@+id/main_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:dpb_dotColor="@color/colorAccent"
            app:dpb_noOfDots="4"
            android:visibility="invisible"
            />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.57" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>
